# ChatGLM3-TPU

./: .gitignore  README.md  chat.py
compile/: compile.sh  export_onnx.py
demo/: CMakeLists.txt  demo.cpp
python_demo/: CMakeLists.txt  ChatGLM.cpp  run.py
web_demo/: CMakeLists.txt  chat.cpp  chat.py  web_demo.py
web_demo/lib_pcie/: libbmlib.so.0
